--- a/base-workflow.yml
+++ b/base-workflow.yml
@@ -9,8 +9,10 @@ jobs:
     steps:
     - name: Execute ObjectScript Quality Analysis
       env:
+        JENKINS_OBJECTSCRIPTQUALITY_URL: https://community-jenkins.objectscriptquality.com
         JENKINS_OBJECTSCRIPTQUALITY_USER: hook
         JENKINS_OBJECTSCRIPTQUALITY_PASSWORD: ${{ secrets.jenkinsPass }}
         JENKINS_OBJECTSCRIPTQUALITY_TRIGGER_ACCESS_TOKEN: ${{ secrets.jobToken }}
-      run: wget https://raw.githubusercontent.com/litesolutions/objectscriptquality-jenkins-integration/master/hook.sh && sh ./hook.sh
+        BRANCH_TO_ANALYZE: master
+      run: wget https://raw.githubusercontent.com/litesolutions/objectscriptquality-jenkins-integration/master/base-hook.sh && sh ./base-hook.sh
 
